--- a/style.css
+++ b/style.css
@@ -6,6 +6,24 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+.boton1{
+	position: relative;
+	left: 25vw;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	width: 30vw;
+	height: 2vw;
+	border-radius: 2vw;
+	border: 1px solid white;
+}
+#enviar{
+	position: relative;
+	left: 20vw;
+	top: -2vw;
+	width: 5vw;
+	height: 2vw;
+}
 #imagen{
 	width: 15vw;
 	height: 10vw;
@@ -375,6 +393,10 @@ main .info-data {
 	margin-top: 36px;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+	display: flex;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
 	grid-gap: 20px;
 }
 main .info-data .card {
